--- a/cluster/conf/apSecfix.yml
+++ b/cluster/conf/apSecfix.yml
@@ -226,11 +226,11 @@ lams-services:
   env_specific_db_migration_image: egovdevops/egov-client-impl:ap-specific-migration
   tenant_host_mapping:
       domain_suffix:
-        - .egovernments.org
+        - -sectest.egovernments.org
       url_schema:
         - https://
       city:
-        - name: kurnool-sectest
+        - name: kurnool
         
 lams-workflow:
   replicas: 2
